nb: setup and apply image matte

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,19 +2,246 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3e59f47c",
+   "id": "32ba65b7",
    "metadata": {},
    "source": [
-    "# COSC522 Final Project - Catifier\n",
-    "\n",
-    "### Team 3: Purnachandra Anirudh Gajjala, Gabriel Abeyie, Cameron Adkins"
+    "## COSC522: Final Project - Catifier\n",
+    "### Cameron Adkins, Purnachandra Anirudh Gajjala, Gabriel Abeyie"
    ]
   },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f37ee6a7",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Numpy.\n",
+    "import numpy as np\n",
+    "from numpy.lib.stride_tricks import sliding_window_view\n",
+    "\n",
+    "# Need plots.\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Pandas.\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Machine learning toolkit.\n",
+    "from sklearn.model_selection import KFold, cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import *\n",
+    "from sklearn.preprocessing import Normalizer\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    "\n",
+    "# Scipy for fft's and the like.\n",
+    "import scipy as sc\n",
+    "import scipy.io.wavfile as wavfile\n",
+    "from scipy import signal\n",
+    "from scipy.fftpack import fft, fftfreq\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Seaborn for plots.\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Ipython for basic visual output types.\n",
+    "import IPython\n",
+    "\n",
+    "# Imbalanced learn for rebalancing.\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Standard Python libs.\n",
+    "import os\n",
+    "import glob\n",
+    "import csv\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "# Pillow.\n",
+    "import PIL as pil\n",
+    "\n",
+    "# Tensorflow\n",
+    "#import tensorflow as tf\n",
+    "#from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "#from tensorflow.keras.datasets import fashion_mnist\n",
+    "#from tensorflow.keras.layers import Dense\n",
+    "#from tensorflow.keras.optimizers import Adam\n",
+    "#from tensorflow.keras.layers import Conv2D, Flatten, Dense, AveragePooling2D, GlobalAveragePooling2D,Dropout\n",
+    "#from tensorflow.keras.applications.resnet import ResNet50\n",
+    "#from tensorflow.keras.models import Sequential\n",
+    "#from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
+    "# For images\n",
+    "#from skimage.color import rgb2gray\n",
+    "#import cv2\n",
+    "#from scipy import ndimage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ad80f83",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Utility functions.\n",
+    "\n",
+    "def image_load(filename):\n",
+    "    loader = pil.Image.open(filename);\n",
+    "    ret = loader.copy();\n",
+    "    loader.close();\n",
+    "    \n",
+    "    return ret;\n",
+    "\n",
+    "def trimap_to_mask(trimap, include_border = True):\n",
+    "    trimap_data = trimap.getdata();\n",
+    "    \n",
+    "    mask_data = np.zeros((trimap.height, trimap.width), dtype=np.uint8);\n",
+    "    \n",
+    "    for x in range(0, trimap.width):\n",
+    "        for y in range(0, trimap.height):\n",
+    "            idx = x + (y * trimap.width);\n",
+    "            tri = trimap_data[idx];\n",
+    "            \n",
+    "            if (tri == 1 or (include_border == True and tri == 3)):\n",
+    "                mask_data[y, x] = 255;\n",
+    "            else:\n",
+    "                mask_data[y, x] = 0;\n",
+    "                \n",
+    "    mask = pil.Image.fromarray(mask_data);\n",
+    "    \n",
+    "    return mask;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ff6efef",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Class definitions.\n",
+    "\n",
+    "class CatBreedSample:\n",
+    "    def __init__(self, label, image_file, mask_file = None, bb_file = None):\n",
+    "        self.label = label;\n",
+    "        \n",
+    "        self.image_file = image_file;\n",
+    "        self.mask_file  = mask_file;\n",
+    "        self.bb_file    = bb_file;\n",
+    "        \n",
+    "        # Load the images\n",
+    "        self.image = image_load(self.image_file);\n",
+    "        \n",
+    "        if (self.mask_file != None):\n",
+    "            self.mask = trimap_to_mask(image_load(self.mask_file));\n",
+    "            \n",
+    "            # Composite\n",
+    "            mask_background = pil.Image.new(\"RGB\", self.mask.size, 0);\n",
+    "            self.masked_image = pil.Image.composite(self.image, mask_background, self.mask);\n",
+    "\n",
+    "    def display(self):\n",
+    "        print(\"Image:\", self.image_file);\n",
+    "        print(\"Label:\", self.label);\n",
+    "        \n",
+    "        display(self.image);\n",
+    "        \n",
+    "        if (self.mask):\n",
+    "            display(self.masked_image);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18349d7d",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load everything.\n",
+    "def load_samples(samples_dir):\n",
+    "    class_dirs = glob.glob(samples_dir + \"/*\")\n",
+    "\n",
+    "    samples = [];\n",
+    "\n",
+    "    for class_dir in class_dirs:\n",
+    "        label = os.path.basename(class_dir);\n",
+    "        class_dir_glob = glob.glob(class_dir + \"/*.jpg\");\n",
+    "    \n",
+    "        print(\"Reading files for label '\" + label + \"'\");\n",
+    "    \n",
+    "        for sample_image in class_dir_glob:\n",
+    "            basename  = os.path.splitext(sample_image)[0];\n",
+    "            mask_file = basename + \"_mask.png\";\n",
+    "            bb_file   = basename + \"_bb.xml\";\n",
+    "            \n",
+    "            if (not os.path.exists(mask_file)):\n",
+    "                mask_file = None;\n",
+    "                \n",
+    "            if (not os.path.exists(bb_file)):\n",
+    "                bb_file = None;\n",
+    "                \n",
+    "            \n",
+    "            print(\n",
+    "                len(samples), \n",
+    "                \":\", \n",
+    "                os.path.basename(sample_image), \n",
+    "                \"\\t(mask:\", \n",
+    "                (mask_file != None), \n",
+    "                \"| bb:\", \n",
+    "                (bb_file != None), \n",
+    "                \")\"\n",
+    "            );\n",
+    "            \n",
+    "            sample = CatBreedSample(label, sample_image, mask_file, bb_file);\n",
+    "            samples.append(sample);\n",
+    "\n",
+    "    return samples;\n",
+    "\n",
+    "PWD = os.getcwd();\n",
+    "TRAINING_DATA = PWD + \"/training_data\";\n",
+    "samples = load_samples(TRAINING_DATA);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa6f1196",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "samples[2399].display()\n",
+    "\n",
+    "#display(trimap_to_mask(samples[2399].mask));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6099bf5f",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": []
+  }
+ ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10 (ipython-ml)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3-ml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -26,7 +253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
