nb: generate face image from bounding box

--- a/main.ipynb
+++ b/main.ipynb
@@ -49,7 +49,7 @@
     "# Seaborn for plots.\n",
     "import seaborn as sns\n",
     "\n",
-    "# Ipython for basic visual output types.\n",
+    "# IPython for basic visual output types.\n",
     "import IPython\n",
     "\n",
     "# Imbalanced learn for rebalancing.\n",
@@ -59,6 +59,7 @@
     "import os\n",
     "import glob\n",
     "import csv\n",
+    "import xml.etree.ElementTree as et\n",
     "from dataclasses import dataclass\n",
     "\n",
     "# Pillow.\n",
@@ -84,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ad80f83",
+   "id": "8553e7a6",
    "metadata": {
     "scrolled": true
    },
@@ -122,13 +123,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff6efef",
+   "id": "6982e566",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# Class definitions.\n",
+    "\n",
+    "@dataclass\n",
+    "class Point:\n",
+    "    x: int;\n",
+    "    y: int;\n",
+    "\n",
+    "@dataclass\n",
+    "class BoundingBox:\n",
+    "    ll: Point;\n",
+    "    lr: Point;\n",
+    "    ul: Point;\n",
+    "    ur: Point;\n",
     "\n",
     "class CatBreedSample:\n",
     "    def __init__(self, label, image_file, mask_file = None, bb_file = None):\n",
@@ -138,15 +151,40 @@
     "        self.mask_file  = mask_file;\n",
     "        self.bb_file    = bb_file;\n",
     "        \n",
-    "        # Load the images\n",
+    "        # Load the image\n",
     "        self.image = image_load(self.image_file);\n",
     "        \n",
-    "        if (self.mask_file != None):\n",
+    "        # Composite if a mask is available.\n",
+    "        if (self.mask_file):\n",
     "            self.mask = trimap_to_mask(image_load(self.mask_file));\n",
     "            \n",
-    "            # Composite\n",
-    "            mask_background = pil.Image.new(\"RGB\", self.mask.size, 0);\n",
-    "            self.masked_image = pil.Image.composite(self.image, mask_background, self.mask);\n",
+    "            background = pil.Image.new(\"RGB\", self.mask.size, 0);\n",
+    "            self.masked_image = pil.Image.composite(self.image, background, self.mask);\n",
+    "        else:\n",
+    "            self.mask = None;\n",
+    "            self.masked_image = None;\n",
+    "            \n",
+    "        # Get a bounding box.\n",
+    "        if (self.bb_file):\n",
+    "            tree = et.parse(self.bb_file);\n",
+    "            root = tree.getroot();\n",
+    "\n",
+    "            xmin = int(root.findall(\"./object/bndbox/xmin\")[0].text);\n",
+    "            xmax = int(root.findall(\"./object/bndbox/xmax\")[0].text);\n",
+    "            ymin = int(root.findall(\"./object/bndbox/ymin\")[0].text);\n",
+    "            ymax = int(root.findall(\"./object/bndbox/ymax\")[0].text);\n",
+    "\n",
+    "            self.bb = BoundingBox(0, 0, 0, 0);\n",
+    "            \n",
+    "            self.bb.ll = Point(xmin, ymin);\n",
+    "            self.bb.lr = Point(xmax, ymin);\n",
+    "            self.bb.ul = Point(xmin, ymax);\n",
+    "            self.bb.ur = Point(xmax, ymax);\n",
+    "            \n",
+    "            self.bounded_image = self.image.crop((xmin, ymin, xmax, ymax))\n",
+    "        else:\n",
+    "            self.bb = None;\n",
+    "            self.bounded_image = None;\n",
     "\n",
     "    def display(self):\n",
     "        print(\"Image:\", self.image_file);\n",
@@ -155,13 +193,16 @@
     "        display(self.image);\n",
     "        \n",
     "        if (self.mask):\n",
-    "            display(self.masked_image);"
+    "            display(self.masked_image);\n",
+    "            \n",
+    "        if (self.bb):\n",
+    "            display(self.bounded_image);"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18349d7d",
+   "id": "3611a746",
    "metadata": {
     "scrolled": true
    },
@@ -189,7 +230,6 @@
     "                \n",
     "            if (not os.path.exists(bb_file)):\n",
     "                bb_file = None;\n",
-    "                \n",
     "            \n",
     "            print(\n",
     "                len(samples), \n",
@@ -215,24 +255,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa6f1196",
+   "id": "127a8128",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "samples[2399].display()\n",
+    "samples[0].display()\n",
     "\n",
-    "#display(trimap_to_mask(samples[2399].mask));"
+    "#test_sample = CatBreedSample(\n",
+    "#    \"Sphynx\", \n",
+    "#    \"/home/cva/files/devel/catifier/training_data/Sphynx/Sphynx_192.jpg\",\n",
+    "#    \"/home/cva/files/devel/catifier/training_data/Sphynx/Sphynx_192_mask.png\",\n",
+    "#    \"/home/cva/files/devel/catifier/training_data/Sphynx/Sphynx_192_bb.xml\"\n",
+    "#)\n",
+    "#\n",
+    "#test_sample.display();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6099bf5f",
-   "metadata": {
-    "scrolled": false
-   },
+   "id": "dffc9d84",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
